syntax = "proto3";

package tinder;

option go_package = "./;tinderpbv1";

service GeoService {
    rpc GetProfilesByLocation (GetProfilesByLocationRequest) returns (GetProfilesByLocationResponse);
    rpc ChangeLocation (ChangeLocationRequest) returns (ChangeLocationResponse);
}

message GetProfilesByLocationRequest {
    double latitude = 1;
    double longitude = 2;
}

message GetProfilesByLocationResponse {
    repeated LocationProfileDto profiles = 1;
    oneof error {
        NoNewProfilesError no_new_profiles = 2;
    }
}

message LocationProfileDto {
    int64 profile_id = 1;
    string name = 2;
    string description = 3;
    repeated string photo_urls = 4;
}

message ChangeLocationRequest {
    double latitude = 1;
    double longitude = 2;
}

message ChangeLocationResponse {
    oneof error {
        ProfileIdNotFoundError profile_id_not_found = 1;
        GeoZoneIdNotFoundError geo_zone_id_not_found = 2;
    }
}

// Profiles wasn't found in requested geo zone
message NoNewProfilesError {

}

message ProfileIdNotFoundError {

}

message GeoZoneIdNotFoundError {
    
}