syntax = "proto3";

package tinder;

option go_package = "./;tinderpbv1";
option csharp_namespace = "TinderApiV1";

service ProfileService {
    rpc GetMyProfile (GetMyProfileRequest) returns (GetMyProfileResponse);
    rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc GetProfiles (GetProfilesRequest) returns (GetProfilesResponse);
}

message ProfileDto {
    string gender = 1;
    int32 age = 2;
    string name = 3;
    string description = 4;
    repeated string photo_urls = 5;
}

message GetMyProfileRequest {
}

message GetMyProfileResponse {
    ProfileDto profile = 1;
}

message CreateProfileRequest {
    ProfileDto profile = 1;
}

message CreateProfileResponse {
    int64 profile_id = 1;
}

message UpdateProfileRequest {
    ProfileDto profile = 1;
}

message UpdateProfileResponse {
}

message GetProfilesRequest {
    repeated int64 profile_ids = 1;
}

message GetProfilesResponse {
    repeated ProfileGetDto profiles = 1;
}

message ProfileGetDto {
    int64 profile_id = 1;
    string name = 2;
    string description = 3;
    repeated string photo_urls = 4;
}